Mon, 12 May 2008 11:26:43 +0200 <thp@perli.net>
Fix race condition in is_download_in_progress()

	* src/gpodder/services.py: Make sure we behave correctly when items in
	the download list disappear while we are iterating over the list of
	downloads when trying to find out if a download is already in progress
	* src/gpodder/gui.py: Add SPGoetze to list of bug reporters
	(Closes: https://bugs.launchpad.net/ubuntu/+source/gpodder/+bug/208964)

Mon, 12 May 2008 11:04:53 +0200 <thp@perli.net>
Fix bugs in the calculate_size utility function

	* src/gpodder/util.py: Fix problem when accessing files or folders is
	not possible in calculate_size(); thanks to Scott Wegner for reporting
	this bug on Launchpad
	* src/gpodder/gui.py: Add Scott Wegner to list of bug reporters
	(Closes: https://bugs.launchpad.net/ubuntu/+source/gpodder/+bug/201276)

Sun, 11 May 2008 15:00:07 +0200 <thp@perli.net>
Update German translation, refresh translations

	* data/messages.pot: Refreshed from source code
	* data/po/*.po: Refreshed from messages.pot
	* data/po/de.po: Refreshed and updated

Sat, 10 May 2008 16:45:36 +0200 <thp@perli.net>
Make gPodder respect the user's GNOME toolbar style settings

	* src/gpodder/gui.py: Add Stefan Lohmaier to list of bug reporters
	* data/gpodder.glade: Remove the preset toolbar style (use user's
	configured toolbar style) and set the episode-related toolbar buttons
	to be "important" (so the text is displayed in the mixed mode); thanks
	to Stefan Lohmaier on gPodder Bugzilla for reporting this bug
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=105)

Sat, 10 May 2008 13:38:34 +0200 <thp@perli.net>
Improve feed cache update speed, thanks to the users at ITT

	* src/gpodder/cache.py: fetch() now returns an (updated, feed) tuple,
	where "updated" is a boolean value telling if the feed has been
	updated since the last run and "feed" is the feedparser feed data; fix
	a bug where the etag and the last-modified time were never used in a